	* `setRotation`/`rotateGradually` now accepts `sf::Angle` instead of float
	* `dgm::Window::pollEvent` now returns `std::optional<sf::Event>` and accepts no parameters
	* Math utils migrated to use `sf::Angle`
		* `polarToCartesian` overload accepting `PolarCoords` struct was removed
		* `cartesianToPolar` overload accepting two floats was removed
	* `dgm::Math::map` removed
	* `dgm::Math::getRotated` removed, replaced by `sf::Vector2::rotateBy`
	* `dgm::Math::getDotProduct` removed, replaced by `sf::Vector2::dot`
	* `dgm::Math::getSize` removed, replaced by `sf::Vector2::length`
	* `dgm::Math::polarToCartesian` removed, replaced by `sf::Vector2` constructor accepting length and angle

dgm-lib v2.5.0
 * Added `dgm::Error` for having an error type for `std::expected` with built-in stacktrace
 * Added `dgm::TextureAtlas` that can optimize drawcalls by having a single texture for multiple entities (thus these can be put into a single VBO)
 * `sf::err()` is now redirected into `stderr.txt` (after constructor of `dgm::App` was invoked)
    * Previously, it was completely lost, because it pointed to the original std::cerr stream

dgm-lib v2.4.0
 * Added method `dgm::Window::setViewFromCamera` which is a shorthand for `window.getWindowContext().setView(camera.getCurrentView())`
    * Also `dgm::Window` is now marked as `final`
 * Deprecated default constructors for Clip, Window, Path and TileMap
 * Added examples target
    * Build by default, you can use `-D ENABLE_EXAMPLES=OFF` to surpress on configure
    * Examples showcase various features of the library and how to use them
 * Added `dgm::Clip::getFrameUnchecked` for faster, unchecked access
 * Added `dgm::DynamicBuffer::isEmpty`
 * `dgm::Animation::getSpeed` was marked as noexcept
 * Fixed an off-by-one error produced from `dgm::Animation::set/getSpeed`
 * Added integration test for integrating precompiled binaries with CMake

dgm-lib v2.3.1