@@ -13,13 +13,6 @@ TEST_CASE("[Math]")
 {
     const auto ZERO_VECTOR = sf::Vector2f(0.f, 0.f);
 
-    SECTION("getSize")
-    {
-        REQUIRE(dgm::Math::getSize({ 0.f, 0.f }) == 0.f);
-        REQUIRE(dgm::Math::getSize({ 3.f, 4.f }) == 5.f);
-        REQUIRE(dgm::Math::getSize({ 3.f, -4.f }) == 5.f);
-    }
-
     SECTION("toUnit")
     {
         SECTION("Returns zero vector for input zero vector")
@@ -34,7 +27,7 @@ TEST_CASE("[Math]")
             for (auto&& vec : vectors)
             {
                 auto unit = dgm::Math::toUnit(vec);
-                REQUIRE(Approx(dgm::Math::getSize(unit)) == 1.f);
+                REQUIRE(Approx(unit.length()) == 1.f);
 
                 auto polar1 = dgm::Math::cartesianToPolar(vec);
                 auto polar2 = dgm::Math::cartesianToPolar(unit);
@@ -44,29 +37,28 @@ TEST_CASE("[Math]")
         }
     }
 
-    SECTION("rotateVector")
-    {
-        auto v1 = dgm::Math::getRotated({ 1.f, 0.f }, 90.f);
-        auto v2 = dgm::Math::getRotated<dgm::Math::AngleType::Radians>(
-            { 1.f, 0.f }, std::numbers::pi_v<float> / 2.f);
-
-        COMPARE_VECTORS(v1, sf::Vector2f(0.f, 1.f));
-        COMPARE_VECTORS(v2, sf::Vector2f(0.f, 1.f));
-    }
-
-    SECTION("getDotProduct")
-    {
-        const float dot =
-            dgm::Math::getDotProduct({ -2.f, 4.f }, { 3.f, -4.f });
-        REQUIRE(dot == -22.f);
-    }
-
     SECTION("getRadialDifference")
     {
-        REQUIRE(dgm::Math::getRadialDifference(0.f, 10.f) == 10.f);
-        REQUIRE(dgm::Math::getRadialDifference(350.f, 0.f) == 10.f);
-        REQUIRE(dgm::Math::getRadialDifference(270.f, 90.f) == 180.f);
-        REQUIRE(dgm::Math::getRadialDifference(360.f, 0.f) == 0.f);
+        REQUIRE(
+            Approx(dgm::Math::getRadialDifference(
+                       sf::degrees(0.f), sf::degrees(10.f))
+                       .asDegrees())
+            == 10.f);
+        REQUIRE(
+            Approx(dgm::Math::getRadialDifference(
+                       sf::degrees(350.f), sf::degrees(0.f))
+                       .asDegrees())
+            == 10.f);
+        REQUIRE(
+            Approx(dgm::Math::getRadialDifference(
+                       sf::degrees(270.f), sf::degrees(90.f))
+                       .asDegrees())
+            == 180.f);
+        REQUIRE(
+            Approx(dgm::Math::getRadialDifference(
+                       sf::degrees(360.f), sf::degrees(0.f))
+                       .asDegrees())
+            == 0.f);
     }
 }
 
@@ -157,76 +149,35 @@ TEST_CASE("CartesianToPolar", "Conversion")
     SECTION("random case")
     {
         vec = sf::Vector2f(1.f, 1.f);
-        refOut = dgm::Math::PolarCoords(45.f, sqrt(2.f));
+        refOut = dgm::Math::PolarCoords(sf::degrees(45.f), sqrt(2.f));
     }
 
     SECTION("0 degrees")
     {
         vec = sf::Vector2f(5.f, 0.f);
-        refOut = dgm::Math::PolarCoords(0.f, 5.f);
+        refOut = dgm::Math::PolarCoords(sf::degrees(0.f), 5.f);
     }
 
     SECTION("90 degrees")
     {
         vec = sf::Vector2f(0.f, 10.f);
-        refOut = dgm::Math::PolarCoords(90.f, 10.f);
+        refOut = dgm::Math::PolarCoords(sf::degrees(90.f), 10.f);
     }
 
     SECTION("180 degrees")
     {
         vec = sf::Vector2f(-20.f, 0.f);
-        refOut = dgm::Math::PolarCoords(180.f, 20.f);
+        refOut = dgm::Math::PolarCoords(sf::degrees(180.f), 20.f);
     }
 
     SECTION("270 degrees")
     {
         vec = sf::Vector2f(0.f, -40.f);
-        refOut = dgm::Math::PolarCoords(270.f, 40.f);
+        refOut = dgm::Math::PolarCoords(sf::degrees(270.f), 40.f);
     }
 
     auto polar = dgm::Math::cartesianToPolar(vec);
 
-    REQUIRE(Approx(polar.angle) == refOut.angle);
+    REQUIRE(Approx(polar.angle.asRadians()) == refOut.angle.asRadians());
     REQUIRE(Approx(polar.length) == refOut.length);
-}
-
-TEST_CASE("PolarToCartesian", "Conversion")
-{
-    dgm::Math::PolarCoords polar(53.13f, 5.f);
-    auto vec = dgm::Math::polarToCartesian(polar);
-
-    REQUIRE(Approx(vec.x) == 3.f);
-    REQUIRE(Approx(vec.y) == 4.f);
-}
-
-TEST_CASE("PolarCartesianSymmetry", "Conversion")
-{
-    sf::Vector2f inputVec;
-    sf::Vector2f outputVec;
-
-    SECTION("+x+y")
-    {
-        inputVec = sf::Vector2f(100.f, 20.f);
-    }
-
-    SECTION("-x+y")
-    {
-        inputVec = sf::Vector2f(-55.f, 12.f);
-    }
-
-    SECTION("-x-y")
-    {
-        inputVec = sf::Vector2f(-70.f, -22.f);
-    }
-
-    SECTION("+x-y")
-    {
-        inputVec = sf::Vector2f(255.f, -2.f);
-    }
-
-    outputVec =
-        dgm::Math::polarToCartesian(dgm::Math::cartesianToPolar(inputVec));
-
-    REQUIRE(Approx(inputVec.x) == outputVec.x);
-    REQUIRE(Approx(inputVec.y) == outputVec.y);
 }
